--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10186,16 +10186,16 @@ pw
 <div created="20190108084833171" modified="20220131141113287" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20190108104722609" modified="20230104142023080" title="$:/state/tab/moresidebar-1850697562">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20190108104722609" modified="20230407092929152" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20190108101211875" modified="20230213174234048" title="$:/state/tab/sidebar--595412856">
-<pre>$:/plugins/ajh/favorites/SideBar</pre>
+<div created="20190108101211875" modified="20230407092924864" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20230406140847848" list="[[fulgurances / épiphanies]] [[buy achats amazon / leclerc / leboncoin]] [[si demain je meurs]] [[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230406140926919" title="$:/StoryList">
+<div created="20230407092811025" list="[[dev ideas]] [[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230407093031272" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10264,8 +10264,8 @@ pw
 <div created="20210313142548541" modified="20230201085447979" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20230406140925030" title="$:/temp/search">
-<pre>fulg</pre>
+<div created="20190114084246125" modified="20230407092913193" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -12356,7 +12356,7 @@ daniel c dit:
 ```
 </pre>
 </div>
-<div created="20190108110103262" modified="20190206143547465" tags="todo dev" title="dev ideas" type="">
+<div created="20190108110103262" modified="20230407094339627" tags="idea todo dev" title="dev ideas" type="">
 <pre>* file sorter / duplicate hunter
 * aspirateur leno.frbb.net &gt; YAML &gt; TiddlyWiki
 * Alerte Vigie SOS
