--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -639,6 +639,8 @@ Error message and password prompt
 
 <li>security</li>
 
+<li>shadowrun archetypes prepa</li>
+
 <li>Shadowrun Crossfire</li>
 
 <li>shadowrun ideas</li>
@@ -10186,8 +10188,8 @@ pw
 <div created="20190108084833171" modified="20220131141113287" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20190108104722609" modified="20230407092929152" title="$:/state/tab/moresidebar-1850697562">
-<pre>$:/core/ui/MoreSideBar/Tags</pre>
+<div created="20190108104722609" modified="20230612154527594" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/Recent</pre>
 </div>
 <div created="20190108101211875" modified="20230407092924864" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
@@ -10195,7 +10197,7 @@ pw
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20230531082030079" list="[[sms textos]] [[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230531082030079" title="$:/StoryList">
+<div created="20230626122626867" list="[[shadowrun archetypes prepa]] [[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230626122626867" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10217,7 +10219,7 @@ pw
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10237,7 +10239,7 @@ pw
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -10249,11 +10251,11 @@ pw
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1632&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;918&quot;
+            &quot;text&quot;: &quot;1080&quot;
         }
     }
 }</pre>
@@ -10264,8 +10266,8 @@ pw
 <div created="20210313142548541" modified="20230519124255878" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20230531082027722" title="$:/temp/search">
-<pre>sms</pre>
+<div created="20190114084246125" modified="20230619071820042" title="$:/temp/search">
+<pre>stand</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10625,8 +10627,9 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Jean-Samuel Pallard
 </pre>
 </div>
-<div created="20200526193035917" modified="20230112171811463" tags="core improve" title="blagues / jokes">
-<pre>* Mr &amp; Mme soupover : Michel (soupe au vermichel)
+<div created="20200526193035917" modified="20230531145956900" tags="core improve" title="blagues / jokes">
+<pre>* différence entre une blonde et une tortue ? y'en a pas, une fois sur l'dos c'est baisé
+* Mr &amp; Mme soupover : Michel (soupe au vermichel)
 * 2 mouettes se battent pour un bout de pain : on fait mouette mouette ?
 * comment appelle-ton un oiseau roux ? un roussignol
 * qu'est-ce qu'un matelot qui boit trop ? Un saoul-marin
@@ -10646,6 +10649,8 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * - tu sais comment on fait les bébés toi ? - ben oui ! le papa il met la graine dans le ventre de la maman, et après il la pousse bien au fond avec sa bite !
 * - maman, lequel de toi &amp; papa m'a donné son intelligence ? - ça doit être ton père ! - ah bon, pourquoi ? - parce que moi j'ai toujours la mienne !
 * Demandant a une Mondaine si elle coucherait avec lui pour 1 Milliard, celle ci repond qu'elle se laisserait tenter. Mais quand ensuite il demande si elle le ferait pour 1 seul , elle s'indigne &quot; Mais pour qui me prenez vous !!!! &quot; Il lui dit alors : Je suis déjà certain de ce que vous etes , je voulais juste préciser un peu vos tarifs... 
+* c quoi un cochon qui rigole ? un portouguais
+* pourquoi au portugal les immeubles n'ont que le RDC ? parce qu'ils sont tous concierges
 * Mario: un personnage japonais avec une tête de portugais qui parle anglais avec un accent italien et fait un métier de polonais
 * be like panda : asian, black &amp; white !
 
@@ -11163,8 +11168,12 @@ He was the embodied example of living fully.  He said, “I am means.  There are
 
 </pre>
 </div>
-<div created="20220428145354217" modified="20220829090221978" tags="" title="cadeaux">
+<div created="20220428145354217" modified="20230602090152337" tags="" title="cadeaux">
 <pre>! Julia
+* multiprise 32A
+* ''livre gestes écologiques''
+* ''pic à chignon''
+* pikachignon
 * livre Jacques Tomet
 * pile montre
 * téléphone sans fil
@@ -11172,8 +11181,7 @@ He was the embodied example of living fully.  He said, “I am means.  There are
 * machine à gauffre + croques monsieurs
 * ~~cloche à micro-ondes~~
 * multiprise plan de cuisine
-* perceuse
-* pic à chignon
+* ~~perceuse~~
 * foulard
 * four chaleur tournante &amp; porte froide
 * plaques induction
@@ -11182,12 +11190,15 @@ He was the embodied example of living fully.  He said, “I am means.  There are
 
 ! Perceval
 * skateboard
-* moto en plastique
 * tapette à mouches
 * peluche Bambi
 * livre &quot;lire tout seul&quot; ?
-* camping-car lego
-* voiture lego avec pot d'échappement</pre>
+* voiture lego avec pot d'échappement
+* ~~camping-car lego~~
+* ~~moto en plastique~~
+
+! Ambroise
+* ''lot playmobile''</pre>
 </div>
 <div created="20190329085105976" modified="20201201104550559" tags="magic" title="card magic">
 <pre>* ''Spread Cull''
@@ -12638,7 +12649,7 @@ racloir d'oreille / oriculi / cure-oreill https://www.boutiquezerodechet.com/sal
 * les co-destinataires d'un mail groupé voient ton e-mail
 * se désinscrire d'une liste de diffusion confirme la validité de l'e-mail</pre>
 </div>
-<div created="20190412124207841" modified="20220822070724627" tags="kids" title="Emma kid talk">
+<div created="20190412124207841" modified="20230605090429528" tags="kids" title="Emma kid talk">
 <pre>* 	pop	&gt;&gt;	pomme
 * 	fafé	&gt;&gt;	café
 * 	kuk	&gt;&gt;	sucre
@@ -12668,6 +12679,8 @@ racloir d'oreille / oriculi / cure-oreill https://www.boutiquezerodechet.com/sal
 * Laluelle l'a mit le petit bazare, bazare l'a mit Emma
 * (6ans) Papa, Perceval il arrête pas de nous embêter moi et mes copines ! (Ah bon, il fait quoi ?) Il nous enlève les pouvoirs qu'on se donne pour semblant !
 * Quand j'étais grande ...
+* (Emma tu vas faire pipi stp) J'ai pas besoin j'ai déjà fais hier !
+* (à 7ans, à Cassandre) tu veux lire de la lecture ?
 </pre>
 </div>
 <div created="20221210110939316" modified="20221210111239490" tags="kids" title="Emmanuelle &amp; socialisation">
@@ -13187,7 +13200,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * neutralisation
 * déviation</pre>
 </div>
-<div created="20221229210623979" modified="20230403134559154" tags="" title="fulgurances / épiphanies">
+<div created="20221229210623979" modified="20230619071809892" tags="" title="fulgurances / épiphanies">
 <pre>* le dollar n'est plus adossé à l'or mais à l'armée US
 * lors d'un échange/débat avec qqun &quot;qui pense mal&quot;, ne pas aboutir à le faire changer d'avis c'est le renforcer dans conviction en sa croyance
 * le capitalisme (entendu au sens de &quot;libre marché dérégulé&quot;) &quot;tend vers l'infini&quot; / tend naturellement à aller chercher les instincts les plus profonds de l'homme, puisque c'est ce qui fait le plus vendre : le neuro-marketing découle logiquement d'un marché dérégulé, et aboutit à un &quot;avilissement&quot; global de la société en appuyant &quot;là où ça marche&quot;, là où des millions d'années de pression évolutive ont préparé des chemins neuraux (besoin d'accumulation, reproduction (porno, sites de rencontre...)
@@ -13202,6 +13215,8 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 ** le réel (est) Dieu (parallèle / similitude / ...?)
 * le fait que les sens soient illusoires peut donner envie de se reposer sur la logique (cf cogito Descartien)
 ** MAIS la sensation/croyance de logique est en soi une sensation : rien ne prouve que notre logique soit... logique
+* Big Bang : remontée infinie (t→0 mais ne l'atteind jamais)
+* la reproduction sexuée étant basée sur 2 pôles (mâle &amp; femelle), il est normal, évident et sain qu'une société se développe, se construise et s'équilibre - se polarise en somme - autour de ces 2 pôles
 
 
 &lt;&lt;&lt;
@@ -14245,7 +14260,7 @@ Heureusement, tout cela n’est pas inéluctable. Comme cette guerre se dérou
 # https://www.lesmots-leschoses.fr/livre/9791026708933-la-crise-de-la-realite-formes-et- mecanismes-d-une-destitution-christian-godin/
 # https://www.rtbf.be/info/belgique/detail_coronavirus-en-belgique-fermer-les-commerces-pour-obtenir-un-effet-choc?id=106427333</pre>
 </div>
-<div created="20190524134214903" modified="20220519084601267" tags="todo magic" title="ideas">
+<div created="20190524134214903" modified="20230531145811337" tags="todo magic" title="ideas">
 <pre>! Magic : routine tips
 * jeu du rond
 * false transfert / french drop + &quot;tiens ma pièce&quot;
@@ -14256,6 +14271,9 @@ Heureusement, tout cela n’est pas inéluctable. Comme cette guerre se dérou
 
 ! Blagues / jeux de mots
 * amulette / omelette
+* picorer / picoler
+* arrêter / allaiter
+* malade / balade
 * les Igoto
 * un zandouille &amp; l'autre zandouille
 * les antis :
@@ -16530,7 +16548,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20201201132516726" modified="20230404164335764" tags="kids" title="Perçou kid talk Perceval">
+<div created="20201201132516726" modified="20230605090640259" tags="kids" title="Perçou kid talk Perceval">
 <pre>* a kapoté &gt;&gt;	le grain de beauté
 * a kakopel &gt;&gt;	le tractopelle
 * akatola &gt;&gt;	chocolat
@@ -16592,6 +16610,9 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * (parlant d'un ondamania) &quot;si tu m'le donne on dira que ça sera ''ma cordéon''&quot; (m'accordéon)
 * &quot;Emmanuelle tu peux regarder le &quot;C'est pas Sorcier&quot; sur l'''écroulation'' !&quot; (= l'Effondrement = le Réchauffement Climatique)
 * j'ai explosé en carnage !
+* (Julia: merci Seigneur pour ce repas !) - c'est pas Seigneur qui a fait ce repas, c'est TOI maman !!
+* - papa, z'est fais une crotte ! - et tu as fini ? - non, mais z'vais garder l'reste pour un aut' jour
+* c'est un scotch ré-en-servable
 </pre>
 </div>
 <div created="20190301161125545" modified="20190301161230451" tags="fiche_lecture" title="Philogynes BIG5" type="">
@@ -16983,7 +17004,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Oussama Palersolide
 * Jérémy Monslipjavaifroid / Jérémy Macapote / Jérémy Unepièce</pre>
 </div>
-<div created="20190130144059269" modified="20230525073734569" tags="core" title="pw">
+<div created="20190130144059269" modified="20230616151633367" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -17004,7 +17025,7 @@ instancemanager	admin/password
 ```
 cbp4you.fr &quot;cardiff&quot; saleya123c
 espaceadhesion.cbp-solutions.fr/#/main =&gt; 156800172230660012864
-caisse-epargne.fr 9872360441316688805986217889 / tel enfant sur 8 chiffres
+caisse-epargne.fr 9872360441316688805986217889 / tel enfant sur 8 chiffres 56781234
 https://aude.ausy.fr/ =&gt; 11/18
 https://ceausy.kadeosconnect.com/avantage/       kadeos.s.lemoine@xoxy.net 12/18
 ausyce.fr (&quot;BetweenUs&quot;)	s.l@ycom	l*****m
@@ -18201,6 +18222,46 @@ It's NOT 'Just Going To Happen!'
 * clé U2F		https://u2f-key.tech/fr/
 </pre>
 </div>
+<div created="20230612124400818" modified="20230626122709165" tags="todo jdr" title="shadowrun archetypes prepa">
+<pre>* implants cools
+** wired reflex II
+** (weapon focus) spurs
+** cyber shock-gloves
+* sorts cools
+** barrière / barrière mana
+** invisibilité
+** enrage ?
+*** contraintes sur la répartition du dicepool
+*** contrainte sur la cible (+proche)
+** gecko crawl
+* archetypes
+** ghoul + cyber-eyes
+** gecko (~àla spiderman, Neko Noguchi) &gt; adept ? mage ?
+** pyromancer / burning fire mage
+** drug-hooked addict
+** adept shaman : cat
+** adept shaman : raven
+** decker + cybergun
+** burnout mage
+** cyber-rollers + parkour + cyber-grapple
+** sniper
+** geas
+*** toucher seulement
+*** gesture
+*** obvious seulement
+**** tone : 
+***** violet
+***** orange
+***** vert
+** &quot;Social Engineer&quot;: This character may not possess the most advanced hacking skills, but they excel in social manipulation and exploiting human weaknesses. They are skilled at bypassing security through clever deception and social engineering. They use their charm, charisma, and knowledge of human psychology to gain access to valuable information, utilizing the Matrix as a tool to further their schemes.
+* PNJ archetypes
+** decker allié
+*** IA
+** ghoul
+** johnson dragon
+** assassination target = dragon
+** &quot;moist larry&quot; : magician street-doc</pre>
+</div>
 <div created="20230118100425254" modified="20230118101925090" tags="jeux todo" title="Shadowrun Crossfire">
 <pre>* Shadowrun: Crossfire - Gameplay &amp; Discussion (35mn)       https://www.youtube.com/watch?v=04Ye9DyRfys
 * Shadowrun Crossfire With the Designers #1      https://www.youtube.com/watch?v=NKNhKmk2sh4
@@ -18658,8 +18719,7 @@ The answer to your second question: the realization that the utility switch coul
 * Ne crains pas, je suis ton Dieu</pre>
 </div>
 <div created="20210201141630186" modified="20230531083215401" tags="" title="sms textos">
-<pre>
-&lt;&lt;&lt;
+<pre>&lt;&lt;&lt;
 25/04/2023
 Esmeralda est née cette nuit ! 3.2kg, bonne santé, maman va bien. Emmanuelle est très contente, Perceval un peu déçu (il voulait un ptit frère) et pour Cassandre c'est encore un peu abstrait :)
 &lt;&lt;&lt;
@@ -19250,9 +19310,10 @@ Top, juste pour te dire que je n'aime pas balancer, mais ce genre de ragots me d
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20220829090335038" modified="20230308081020269" tags="" title="stand-up ideas">
+<div created="20220829090335038" modified="20230619071940117" tags="" title="stand-up ideas">
 <pre>* arrêter / allaiter
 * karité / qualité
+* taboulé / tabouret
 * (dé)serrer / seller
 * velouté / volonté
 * les antilles / les zentils/gentils
@@ -19265,6 +19326,7 @@ Top, juste pour te dire que je n'aime pas balancer, mais ce genre de ragots me d
 * le divain divan d'yvain ou d'yvan ?
 * je t'amène une camomille ? une camisole ? une camomisole ?
 * pléthore / garde préthorienne
+* les cabrioleurs / cabrioleuses
 
 
 ```
