--- a/homeboard.tw.html
+++ b/homeboard.tw.html
@@ -302,6 +302,8 @@ Error message and password prompt
 
 <li>tid/H1ir2d35i</li>
 
+<li>tid/HJfT8QDv2</li>
+
 <li>tid/HJVjF6acj</li>
 
 <li>tid/Hk75nOn9s</li>
@@ -319,6 +321,10 @@ Error message and password prompt
 <li>tid/ry60iO2co</li>
 
 <li>tid/ryJXYT6cs</li>
+
+<li>tid/ryNnLQwD2</li>
+
+<li>tid/S1p6IQDw3</li>
 
 <li>tid/SyJN_ERhj</li>
 
@@ -9754,7 +9760,7 @@ very-muted-foreground: #849ebb</pre>
 <div created="20230111181256170" modified="20230306143431444" shorttext="prépa maison Mars" tags="done" title="accueil bébé">
 <pre></pre>
 </div>
-<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/rkzwhJQsj [[optim congés]]" modified="20230306143534943" tags="[[home board]]" title="backlog">
+<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/rkzwhJQsj tid/HJfT8QDv2" modified="20230614113833803" tags="[[home board]]" title="backlog">
 <pre></pre>
 </div>
 <div created="20230111103538724" modified="20230306143534945" shorttext="''DIAC'' / SoH ZOE CN-843-RS" tags="done" title="diac">
@@ -9780,13 +9786,13 @@ very-muted-foreground: #849ebb</pre>
 *** mails
 ** 6 mois de délai</pre>
 </div>
-<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="morlaix [[accueil bébé]] tid/SyJN_ERhj diac" modified="20230306143534945" tags="[[home board]]" title="done">
+<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="morlaix [[accueil bébé]] tid/SyJN_ERhj diac [[optim congés]]" modified="20230614113809627" tags="[[home board]]" title="done">
 <pre></pre>
 </div>
-<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="[[prépa baptème]]" modified="20230306143534945" tags="[[home board]]" title="en cours JU">
+<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="[[prépa baptème]]" modified="20230614113809627" tags="[[home board]]" title="en cours JU">
 <pre></pre>
 </div>
-<div created="20230110163009889" list="" modified="20230306143534945" tags="[[home board]]" title="en cours SAM">
+<div created="20230110163009889" list="" modified="20230614113809627" tags="[[home board]]" title="en cours SAM">
 <pre></pre>
 </div>
 <div created="20230110141834789" modified="20230110144519119" title="explications">
@@ -9800,7 +9806,7 @@ very-muted-foreground: #849ebb</pre>
 * ControlPanel &quot;⛭&quot; &gt; Appearance Toolbars &gt; View Toolbar
 </pre>
 </div>
-<div created="20230111124336323" modified="20230306143846764" shorttext="''familiale 7+''" tags="TODO" title="familiale">
+<div created="20230111124336323" modified="20230614113800060" shorttext="''familiale 6+''" tags="TODO" title="familiale">
 <pre></pre>
 </div>
 <div created="20230110162941854" dpbd-displaytext="no" dpbd-listwidth-num="6" dpbd-widthismax="yes" list="backlog TODO [[todo SAM]] [[todo JU]] [[en cours SAM]] [[en cours JU]] done" modified="20230306144010068" tags="" title="home board">
@@ -9825,7 +9831,7 @@ very-muted-foreground: #849ebb</pre>
 <pre>* vacances zone B : 11 au 27 février
 * arrangement Touran (lili &amp; galou)</pre>
 </div>
-<div created="20230117094742084" modified="20230117094857304" shorttext="optim congés" tags="backlog" title="optim congés">
+<div created="20230117094742084" modified="20230614113809627" shorttext="optim congés" tags="done" title="optim congés">
 <pre>* mardi 15 août 2023 	Assomption
 * mercredi 1er novembre 2023 	La Toussaint
 * ''samedi 11 novembre'' 2023 	Armistice 1918</pre>
@@ -9854,6 +9860,9 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 <div created="20230111181323502" modified="20230111181352841" shorttext="trouver mp3 player (new téléphone ? verif sansa ? new sansa ? new creative ?)" tags="todo" title="tid/H1ir2d35i">
 <pre></pre>
 </div>
+<div created="20230614113833802" modified="20230614113839856" shorttext="retrait CET" tags="backlog" title="tid/HJfT8QDv2">
+<pre></pre>
+</div>
 <div created="20230112175540156" modified="20230112175551154" shorttext="changer assurance emprunteur" tags="backlog" title="tid/HJVjF6acj">
 <pre></pre>
 </div>
@@ -9879,6 +9888,12 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 <pre></pre>
 </div>
 <div created="20230112175327371" modified="20230112175338107" shorttext="BNP dez esprit libre" tags="backlog" title="tid/ryJXYT6cs">
+<pre></pre>
+</div>
+<div created="20230614113819757" modified="20230614113831379" shorttext="dépôt CET" tags="TODO" title="tid/ryNnLQwD2">
+<pre></pre>
+</div>
+<div created="20230614113844863" modified="20230614113851638" shorttext="poser congés" tags="TODO" title="tid/S1p6IQDw3">
 <pre></pre>
 </div>
 <div created="20230206081951338" modified="20230306143441214" shorttext="achat perceuse" tags="done" title="tid/SyJN_ERhj">
@@ -9913,16 +9928,16 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 &lt;/$list&gt;
 &lt;/ul&gt;</pre>
 </div>
-<div created="20230110163339973" list="memorisation familiale" modified="20230306143534943" tags="[[home board]]" title="TODO">
+<div created="20230110163339973" list="memorisation familiale tid/ryNnLQwD2 tid/S1p6IQDw3" modified="20230614113844863" tags="[[home board]]" title="TODO">
 <pre></pre>
 </div>
 <div created="20230111181117956" list="tid/ry60iO2co tid/Hk75nOn9s tid/rJDgndn9j tid/BkN-hO25s tid/H1ir2d35i tid/ByB4q2p9j" modified="20230306143256708" tags="leno" title="todo">
 <pre></pre>
 </div>
-<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20230306143534943" tags="[[home board]]" title="todo JU">
+<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20230614113809627" tags="[[home board]]" title="todo JU">
 <pre></pre>
 </div>
-<div created="20230110163003622" list="[[résiliation cardiff]] tid/HknGcumJn" modified="20230306143534943" tags="[[home board]]" title="todo SAM">
+<div created="20230110163003622" list="[[résiliation cardiff]] tid/HknGcumJn" modified="20230614113809627" tags="[[home board]]" title="todo SAM">
 <pre></pre>
 </div>
 <div tags="Tips" title="Warning: Board Removes Tags">
