--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10197,7 +10197,7 @@ pw
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20230626122626867" list="[[shadowrun archetypes prepa]] [[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230626122626867" title="$:/StoryList">
+<div list="[[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10266,8 +10266,8 @@ pw
 <div created="20210313142548541" modified="20230519124255878" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20230619071820042" title="$:/temp/search">
-<pre>stand</pre>
+<div created="20190114084246125" modified="20230628100639162" title="$:/temp/search">
+<pre>deviant</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -17004,7 +17004,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Oussama Palersolide
 * Jérémy Monslipjavaifroid / Jérémy Macapote / Jérémy Unepièce</pre>
 </div>
-<div created="20190130144059269" modified="20230616151633367" tags="core" title="pw">
+<div created="20190130144059269" modified="20230704131014515" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -17159,6 +17159,8 @@ bnp / 100297085197700215637834 troll456123
 diac =&gt; https://v2.mybattery.rcibanque.com/renault/ 1002218279 / troll
 ikea =&gt; :ikea.s.le-xn@523
 leetchi =&gt; leetchi.s.le-xn@523
+deviantart =&gt; deviantart.os.osxn623
+meetup =&gt; sale@a__yfr723m
 ```
 
 
