--- a/homeboard.tw.html
+++ b/homeboard.tw.html
@@ -9760,7 +9760,7 @@ very-muted-foreground: #849ebb</pre>
 <div created="20230111181256170" modified="20230306143431444" shorttext="prépa maison Mars" tags="done" title="accueil bébé">
 <pre></pre>
 </div>
-<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/rkzwhJQsj tid/HJfT8QDv2" modified="20230614113833803" tags="[[home board]]" title="backlog">
+<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/rkzwhJQsj tid/HJfT8QDv2" modified="20230724072308044" tags="[[home board]]" title="backlog">
 <pre></pre>
 </div>
 <div created="20230111103538724" modified="20230306143534945" shorttext="''DIAC'' / SoH ZOE CN-843-RS" tags="done" title="diac">
@@ -9786,13 +9786,13 @@ very-muted-foreground: #849ebb</pre>
 *** mails
 ** 6 mois de délai</pre>
 </div>
-<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="morlaix [[accueil bébé]] tid/SyJN_ERhj diac [[optim congés]]" modified="20230614113809627" tags="[[home board]]" title="done">
+<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="morlaix [[accueil bébé]] tid/SyJN_ERhj diac [[optim congés]] tid/S1p6IQDw3" modified="20230724072308045" tags="[[home board]]" title="done">
 <pre></pre>
 </div>
-<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="[[prépa baptème]]" modified="20230614113809627" tags="[[home board]]" title="en cours JU">
+<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="[[prépa baptème]]" modified="20230724072308045" tags="[[home board]]" title="en cours JU">
 <pre></pre>
 </div>
-<div created="20230110163009889" list="" modified="20230614113809627" tags="[[home board]]" title="en cours SAM">
+<div created="20230110163009889" list="tid/ryNnLQwD2" modified="20230724072308045" tags="[[home board]]" title="en cours SAM">
 <pre></pre>
 </div>
 <div created="20230110141834789" modified="20230110144519119" title="explications">
@@ -9890,10 +9890,10 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 <div created="20230112175327371" modified="20230112175338107" shorttext="BNP dez esprit libre" tags="backlog" title="tid/ryJXYT6cs">
 <pre></pre>
 </div>
-<div created="20230614113819757" modified="20230614113831379" shorttext="dépôt CET" tags="TODO" title="tid/ryNnLQwD2">
+<div created="20230614113819757" modified="20230724072308045" shorttext="dépôt CET" tags="[[en cours SAM]]" title="tid/ryNnLQwD2">
 <pre></pre>
 </div>
-<div created="20230614113844863" modified="20230614113851638" shorttext="poser congés" tags="TODO" title="tid/S1p6IQDw3">
+<div created="20230614113844863" modified="20230724072303974" shorttext="poser congés" tags="done" title="tid/S1p6IQDw3">
 <pre></pre>
 </div>
 <div created="20230206081951338" modified="20230306143441214" shorttext="achat perceuse" tags="done" title="tid/SyJN_ERhj">
@@ -9928,16 +9928,16 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 &lt;/$list&gt;
 &lt;/ul&gt;</pre>
 </div>
-<div created="20230110163339973" list="memorisation familiale tid/ryNnLQwD2 tid/S1p6IQDw3" modified="20230614113844863" tags="[[home board]]" title="TODO">
+<div created="20230110163339973" list="memorisation familiale" modified="20230724072308044" tags="[[home board]]" title="TODO">
 <pre></pre>
 </div>
 <div created="20230111181117956" list="tid/ry60iO2co tid/Hk75nOn9s tid/rJDgndn9j tid/BkN-hO25s tid/H1ir2d35i tid/ByB4q2p9j" modified="20230306143256708" tags="leno" title="todo">
 <pre></pre>
 </div>
-<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20230614113809627" tags="[[home board]]" title="todo JU">
+<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20230724072308044" tags="[[home board]]" title="todo JU">
 <pre></pre>
 </div>
-<div created="20230110163003622" list="[[résiliation cardiff]] tid/HknGcumJn" modified="20230614113809627" tags="[[home board]]" title="todo SAM">
+<div created="20230110163003622" list="[[résiliation cardiff]] tid/HknGcumJn" modified="20230724072308044" tags="[[home board]]" title="todo SAM">
 <pre></pre>
 </div>
 <div tags="Tips" title="Warning: Board Removes Tags">
