--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -651,7 +651,7 @@ Error message and password prompt
 
 <li>sms textos</li>
 
-<li>stand-up ideas</li>
+<li>stand-up ideas, punchlines...</li>
 
 <li>Statistiques ethniques USA</li>
 
@@ -10197,7 +10197,7 @@ pw
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20231027083019571" list="[[online services, addons &amp; resources]] [[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20231027083019571" title="$:/StoryList">
+<div created="20231122091449081" list="[[stand-up ideas, punchlines...]] [[si demain je meurs]] [[shadowrun ideas]] [[buy achats amazon / leclerc / leboncoin]] [[vater td]] [[fulgurances / épiphanies]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20231122091514262" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10251,11 +10251,11 @@ pw
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1536&quot;
+            &quot;text&quot;: &quot;1696&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;864&quot;
+            &quot;text&quot;: &quot;954&quot;
         }
     }
 }</pre>
@@ -10266,8 +10266,8 @@ pw
 <div created="20210313142548541" modified="20230519124255878" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20231027083017402" title="$:/temp/search">
-<pre>scribd</pre>
+<div created="20190114084246125" modified="20231122091511900" title="$:/temp/search">
+<pre>allaiter</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -11479,7 +11479,7 @@ sentiment = émotion x temps
 
 bonheur = joie x temps</pre>
 </div>
-<div created="20190725145732868" modified="20230111152012731" tags="dev" title="code snippets (java, git, kubectl / k8s ...)">
+<div created="20190725145732868" modified="20231103155339763" tags="dev" title="code snippets (java, git, kubectl / k8s ...)">
 <pre>! Java
 !! Java stream regroupement d'objets en Map&lt;A, B&gt; à partir d'une liste d'objets
 
@@ -11532,6 +11532,11 @@ IntStream.range(0, proposals.size()).forEach
         }
     }
 
+```
+
+!! boucle infinie
+```
+for (int redirectCount = 0;;) {}
 ```
 
 ! Kotlin : création d'un lambda
@@ -16590,7 +16595,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20201201132516726" modified="20230605090640259" tags="kids" title="Perçou kid talk Perceval">
+<div created="20201201132516726" modified="20231122083646288" tags="kids" title="Perçou kid talk Perceval">
 <pre>* a kapoté &gt;&gt;	le grain de beauté
 * a kakopel &gt;&gt;	le tractopelle
 * akatola &gt;&gt;	chocolat
@@ -16655,6 +16660,9 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * (Julia: merci Seigneur pour ce repas !) - c'est pas Seigneur qui a fait ce repas, c'est TOI maman !!
 * - papa, z'est fais une crotte ! - et tu as fini ? - non, mais z'vais garder l'reste pour un aut' jour
 * c'est un scotch ré-en-servable
+* 5ans : dans la salle de bain devant le miroir, on parle de la couleur des yeux d'Emmanuel, très noirs :
+** Emmanuelle &gt; &quot;ah oui c'est vrai mes yeux ils sont ''super noirs''&quot;
+** Perceval, qui aime bien être au centre de l'attention &amp; a les yeux bleus &gt; &quot;haaaan mes yeux ils sont ''super noirs et bleus''&quot;
 </pre>
 </div>
 <div created="20190301161125545" modified="20190301161230451" tags="fiche_lecture" title="Philogynes BIG5" type="">
@@ -19356,7 +19364,7 @@ Top, juste pour te dire que je n'aime pas balancer, mais ce genre de ragots me d
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20220829090335038" modified="20230619071940117" tags="" title="stand-up ideas">
+<div created="20220829090335038" modified="20231122091627432" tags="" title="stand-up ideas, punchlines...">
 <pre>* arrêter / allaiter
 * karité / qualité
 * taboulé / tabouret
@@ -19385,6 +19393,8 @@ il m'a rendu son livre déchiré
 
 p'tit hippopotam t'as ma malle en lambeaux beaucoup cousent ze peut peut-être être ...
 p'tit hippopotam t'as menti en tirant 
+
+lotocensure: sur les réseaux sociaux, tu t'censure sauf si tu t'sens sûr
 </pre>
 </div>
 <div created="20200717093101888" modified="20200722084901185" tags="" title="Statistiques ethniques USA">
