--- a/homeboard.tw.html
+++ b/homeboard.tw.html
@@ -9760,7 +9760,7 @@ very-muted-foreground: #849ebb</pre>
 <div created="20230111181256170" modified="20230306143431444" shorttext="prépa maison Mars" tags="done" title="accueil bébé">
 <pre></pre>
 </div>
-<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/rkzwhJQsj tid/HJfT8QDv2" modified="20230724072308044" tags="[[home board]]" title="backlog">
+<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/HJfT8QDv2" modified="20231124162233875" tags="[[home board]]" title="backlog">
 <pre></pre>
 </div>
 <div created="20230111103538724" modified="20230306143534945" shorttext="''DIAC'' / SoH ZOE CN-843-RS" tags="done" title="diac">
@@ -9786,13 +9786,13 @@ very-muted-foreground: #849ebb</pre>
 *** mails
 ** 6 mois de délai</pre>
 </div>
-<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="morlaix [[accueil bébé]] tid/SyJN_ERhj diac [[optim congés]] tid/S1p6IQDw3" modified="20230724072308045" tags="[[home board]]" title="done">
+<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="morlaix [[accueil bébé]] tid/SyJN_ERhj diac [[optim congés]] tid/S1p6IQDw3" modified="20231124162233876" tags="[[home board]]" title="done">
 <pre></pre>
 </div>
-<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="[[prépa baptème]]" modified="20230724072308045" tags="[[home board]]" title="en cours JU">
+<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="[[prépa baptème]]" modified="20231124162233876" tags="[[home board]]" title="en cours JU">
 <pre></pre>
 </div>
-<div created="20230110163009889" list="tid/ryNnLQwD2" modified="20230724072308045" tags="[[home board]]" title="en cours SAM">
+<div created="20230110163009889" list="tid/ryNnLQwD2" modified="20231124162233875" tags="[[home board]]" title="en cours SAM">
 <pre></pre>
 </div>
 <div created="20230110141834789" modified="20230110144519119" title="explications">
@@ -9881,7 +9881,7 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 <div created="20230111181503979" modified="20230130081018106" shorttext="MYZ écran &amp; dés" tags="leno_done" title="tid/rkenhdh9i">
 <pre></pre>
 </div>
-<div created="20230116152513704" modified="20230116152523363" shorttext="utiliser chèques énergie" tags="backlog" title="tid/rkzwhJQsj">
+<div created="20230116152513704" modified="20231124162233876" shorttext="utiliser chèques énergie" tags="[[todo SAM]]" title="tid/rkzwhJQsj">
 <pre></pre>
 </div>
 <div created="20230111181133512" modified="20230111181155260" shorttext="stash sdpn" tags="todo" title="tid/ry60iO2co">
@@ -9928,16 +9928,16 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 &lt;/$list&gt;
 &lt;/ul&gt;</pre>
 </div>
-<div created="20230110163339973" list="memorisation familiale" modified="20230724072308044" tags="[[home board]]" title="TODO">
+<div created="20230110163339973" list="memorisation familiale" modified="20231124162233875" tags="[[home board]]" title="TODO">
 <pre></pre>
 </div>
 <div created="20230111181117956" list="tid/ry60iO2co tid/Hk75nOn9s tid/rJDgndn9j tid/BkN-hO25s tid/H1ir2d35i tid/ByB4q2p9j" modified="20230306143256708" tags="leno" title="todo">
 <pre></pre>
 </div>
-<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20230724072308044" tags="[[home board]]" title="todo JU">
+<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20231124162233875" tags="[[home board]]" title="todo JU">
 <pre></pre>
 </div>
-<div created="20230110163003622" list="[[résiliation cardiff]] tid/HknGcumJn" modified="20230724072308044" tags="[[home board]]" title="todo SAM">
+<div created="20230110163003622" list="[[résiliation cardiff]] tid/HknGcumJn tid/rkzwhJQsj" modified="20231124162233876" tags="[[home board]]" title="todo SAM">
 <pre></pre>
 </div>
 <div tags="Tips" title="Warning: Board Removes Tags">
